Fix: add --enable-preview flag to README run commands
java.lang.IO is a preview API in JDK 25 and requires --enable-preview
to compile. The README run examples omitted this flag, causing users
to get a compile error on launch.

Closes #7

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>